/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    // https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html
    id 'org.graalvm.buildtools.native' version '0.11.1'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
    
    implementation libs.jserialcomm
}

application {
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// On Windows, set the tmpdir to be on the same drive as the code. Otherwise, native-image
// fails with `Error > 'other' has different root`. On github actions, the default tmpdir
// is on C:, and the code is on D:.
if (System.getProperty('os.name').toLowerCase().contains('windows')) {
    def tmpDir = layout.buildDirectory.dir('tmp').get().asFile.absolutePath
    file(tmpDir).mkdirs()
    System.setProperty('java.io.tmpdir', tmpDir)
}

graalvmNative {
    binaries {
        main {
            imageName = 'TeensySPIFlasher'
            verbose = false
            jvmArgs.add('--enable-native-access=ALL-UNNAMED')
            // TODO remove ParseRuntimeOptions
            buildArgs.add('-H:+ParseRuntimeOptions')
        }
    }
}